fix(AccountRow): Show ellipsis when content is too long

--- a/src/ducks/balance/components/AccountRow.styl
+++ b/src/ducks/balance/components/AccountRow.styl
@@ -66,6 +66,8 @@
     font-size 0.75rem
     color var(--coolGrey)
     line-height 1.5
+    text-overflow ellipsis
+    overflow hidden
 
 .AccountRow__updatedAtIcon
     vertical-align top
